tests/errors/semantics/expected_constant_expression/non-constant_in_case.c
// Expected constant expression
void main()
{
	switch (5)
	{
		int a;
		case a:;
	}
}
